--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8723,7 +8723,9 @@ h1, h2, h3, h4, h5,
     color: #E5E5E5;
     list-style: none;
     margin-bottom: 10px; }
-    
+    .ftco-about ul.about-info li span {
+      font-weight: 600;
+      color: #6EC5B8; }
 
 .ftco-about .counter-wrap .text p {
   font-size: 20px; }
