--- a/css/style.css
+++ b/css/style.css
@@ -9218,14 +9218,14 @@ textarea.form-control {
     .ftco-footer-social li a img {
       margin: 20%;
       width: 30px; }
-    .ftco-footer-social li a span {
+    /* .ftco-footer-social li a span {
       position: absolute;
       font-size: 26px;
       top: 50%;
       left: 50%;
       -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%); }
+      transform: translate(-50%, -50%); } */
     .ftco-footer-social li a:hover {
       color: #fff; }
 
